--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport": "^0.4.0",
     "passport-facebook-token": "^3.3.0",
     "randomstring": "^1.1.5",
+    "react-scripts": "^4.0.1",
     "validator": "^11.0.0"
   },
   "engines": {
