--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^7.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.0",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.7.5",
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
