--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -5,7 +5,7 @@ name: Deploy to Firebase Hosting on merge
 'on':
   push:
     branches:
-      - my-heroku/deployment
+      - my-firebase/deployment
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -15,8 +15,8 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_VIVID_LAYOUT_300614 }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_NEW_PROJECT_42FC2 }}'
           channelId: live
-          projectId: vivid-layout-300614
+          projectId: new-project-42fc2
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
