firebase.json was modified again

--- a/client/public/firebase.json
+++ b/client/public/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "/janani/Project/onlineStore/client" ,
+    "public": "../" ,
     "ignore": [
       "firebase.json",
       "**/.*",
